--- a/text/2-teorie.tex
+++ b/text/2-teorie.tex
@@ -1,6 +1,7 @@
 \chapter{Teoretický základ}
 \label{2-teorie}
-
+POPSAT FUKUŠIMU, NĚJAK TAK JAK TO MÁ HELEBRATNT NAPSANÝ U VSTUPNÍCH DAT
+POPSAT SAFECAST, DÁT WEBOVKU, CO DĚLAT A JAK TO SOUVISÍ
 Tato kapitola se zabývá..
 \section{Ionizující záření}
 
