--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -1,32 +1,40 @@
  %**********************************************************************************************************************
-% musím se postarat o diakritiku v příjmeních
 
-%%% ML: rozsirit seznam referenci
 
-@Book{vyssigeodezie,
-  title=	{Vyšší geodézie 1},
-  author=	{Leoš MERVART and Miloš CIMBÁLNÍK},
-  address=	{Praha},
-  publisher=	{Vydavatelství ČVUT},
-  year=		{2002},
-  pages=	{44--54},
-  isbn =	{80-01-02527-6},
-}
+@Book{rapidPyQt,
+  title=	{Rapid GUI Programming with Python and Qt: The Definitive Guide to PyQt Programming},
+  author=	{Mark Summerfield},
+  address = {},
+  publisher=	{Prentice Hall},
+  year=		{2015},
+  isbn =	{9780134393339},
+  }
 
-@Book{diveintopython,
+@Book{diveIntoPython,
   title=	{Dive Into Python},
-  author=	{Mark Pilgrim},
+  author=	{Mark Pilgrim}, 
+  address = {},
   publisher=	{Apress},
   year=		{2004},
-  isbn =	{978-1-59059-356-1},
+  isbn =	{9781590593561},
 }
 
-@Book{qgis,
+@Book{masteringQgis,
   title  =	{Mastering QGIS},
   author=	{Kurt Menke and Luigi Pirelli and Richard Smith and John Van Hoesen},
+  address = {},
   publisher = {Packt Publishing},
   year =        {2015},
-  isbn=      {978-1-78439-868-2}
+  isbn=      {9781784398682}
+}
+
+@Book{pseudocode,
+ title = {Pseudocode: Computer Programming, Algorithm, Programming Language, Declaration, Subroutine, Skeleton},
+ author= {Lambert M. Surhone, Miriam T. Timpledon, Susan F. Marseken},
+ address = {},
+ publisher = {Betascript Publishing},
+ year = {2010},
+ isbn = {9786130317775}
 }
 
 @Booklet{ucebnicepython,
