--- a/text/michael-kala-bp-2017.tex
+++ b/text/michael-kala-bp-2017.tex
@@ -68,9 +68,9 @@
 
 \usepackage{url}
 \usepackage{fancyhdr}
-\usepackage{algorithmic}
+%\usepackage{algorithmic}
 \usepackage{algorithm}
-%\usepackage{algcompatible}
+\usepackage{algcompatible}
 \renewcommand{\ALG@name}{Pseudokód}% Update algorithm name
 \def\ALG@name{Pseudokód}
 
