--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -8,33 +8,24 @@
 	\novazkratka{SÚRO}
 	      {SÚRO}
 	      {Státní ústav radiační ochrany, v. v. i.}
-	      
-	\novazkratka{PSF}
-		  {PSF}
-	      {Python Software Foundation}
 
+	\novazkratka{CSV}
+		  {CSV}
+		  {Comma-separated values - hodnoty oddělené čárkou}
+		  
+	\novazkratka{KML}
+		  {KML}
+		  {Keyhole Markup Language}
+		  
+	\novazkratka{GPX}
+		  {GPX}
+		  {GPS Exchange Format}
+	
+	\novazkratka{JE}
+		  {JE}
+		  {Jaderná elektrárna}
+		  
 	\novazkratka{GIS}
-	      {GIS}
-	      {Geografický informační systém}
-
-      \novazkratka{OSGeo}
-	      {OSGeo}
-	      {Open Source Geospatial Foundation}
-	         
-	  \novazkratka{GUI}	
-	      {GUI}
-	      {Grafické uživatelské rozhraní (Graphical user interface)}
-	      
-	  \novazkratka{CSV}	
-	      {CSV}
-	      {Hodnoty oddělené čárkami (Comma-separated values)}
-	      
-	  \novazkratka{WGS84}	
-	      {WGS84}
-	      {Světový geodetický systém 1984 (World Geodetic System 1984)}
-
-	  \novazkratka{GPL}	
-	      {GPL}
-	      {Všeobecná veřejná licence (General Public License)}
-
+		  {GIS}
+		  {Grafický informační systém}
 \end{seznamzkratek}
