--- a/text/literatura.bib
+++ b/text/literatura.bib
@@ -4,7 +4,7 @@
 @Book{rapidPyQt,
   title=	{Rapid GUI Programming with Python and Qt: The Definitive Guide to PyQt Programming},
   author=	{Mark Summerfield},
-  address = {},
+  address = {New Jersey},
   publisher=	{Prentice Hall},
   year=		{2015},
   isbn =	{9780134393339},
@@ -13,7 +13,7 @@
 @Book{diveIntoPython,
   title=	{Dive Into Python},
   author=	{Mark Pilgrim}, 
-  address = {},
+  address = {Apex},
   publisher=	{Apress},
   year=		{2004},
   isbn =	{9781590593561},
@@ -22,7 +22,7 @@
 @Book{masteringQgis,
   title  =	{Mastering QGIS},
   author=	{Kurt Menke and Luigi Pirelli and Richard Smith and John Van Hoesen},
-  address = {},
+  address = {Birmingham},
   publisher = {Packt Publishing},
   year =        {2015},
   isbn=      {9781784398682}
@@ -31,51 +31,8 @@
 @Book{pseudocode,
  title = {Pseudocode: Computer Programming, Algorithm, Programming Language, Declaration, Subroutine, Skeleton},
  author= {Lambert M. Surhone, Miriam T. Timpledon, Susan F. Marseken},
- address = {},
+ address = {Saarbrücken},
  publisher = {Betascript Publishing},
  year = {2010},
  isbn = {9786130317775}
 }
-
-@Booklet{ucebnicepython,
-  title  =	{Učebnice jazyka Python (aneb Létající cirkus)},
-  author=	{Jan Švec},
-  year =        {2002},
-  url   =	{http://www.root.cz/knihy/ucebnice-jazyka-python/},
-  note   =	{Česká verze knihy Python tutorial od Guida van Rossuma a Freda L. Drakea},
-}
-
-@Online{suro,
-  key	=	 {zweb:suro},
-  title  =	{Státní ústav radiační ochrany, v.v.i.: Odborná činnost ústavu},
-  cited =        {2016-04-08},
-  url   =	{http://www.suro.cz/cz/suro/odborna-cinnost-ustavu},
-}
-
-@Online{surovyzkum,
-  key	=	 {zweb:suro},
-  title  =	{Státní ústav radiační ochrany, v.v.i.: Výzkum v SÚRO a jeho hlavní orientace},
-  cited =        {2016-04-08},
-  url   =	{http://www.suro.cz/cz/vyzkum},
-}
-
-@Online{spektrometrie,
-  key	=	 {zweb:astronuklfyzika},
-  author = {Vojtěch ULLMANN},
-  title  =	{Detekce a spektrometrie ionizujícího záření},
-  cited =        {2016-04-08},
-  url   =	{http://astronuklfyzika.cz/DetekceSpektrometrie.htm},
-}
-
-@Online{cookbook,
-  key	=	 {zweb:cookbook},
-  title  =	{PyQGIS Developer Cookbook},
-  cited =        {2016-04-08},
-  url   =	{http://docs.qgis.org/testing/en/docs/pyqgis_developer_cookbook/},
-}
-
-
-
-
-
-
