--- a/text/4-plugin.tex
+++ b/text/4-plugin.tex
@@ -144,113 +144,113 @@ Z tohoto důvodu je třeba trasu tzv. navzorkovat, tzn. rozdělit jednotlivé ro
 Některé segmenty mohou být kratší, než uživatelsky zadaná vzorkovací vzdálenost. Následující pseudokód\footnote{Pseudokód je kompaktní popis počítačového algoritmu, který používá strukturální konvence programovacího jazyka. Vynechává některé detaily, které nejsou důležité pro pochopení algoritmu (deklarace proměnných atd.) Úcelem použití pseudokódu je právě pochopení algoritmu nezávisle na nutnosti znalosti specifické programovacího jazyka.\cite{pseudocode}} 
 \textbf{TADY HO REFERENCOVAT} popisuje algoritmus \texttt{Získání souřadnic bodů trasy} (ve třídě \texttt{GroundRadiationMonitoringComputation} jako metoda \texttt{getTrackVertices}), který získává souřadnice vrcholů trasy a na základě výpočtu vzdálenosti rozhoduje, zdali je potřeba trasu v jednotlivých segmentech navzorkovat. Pokud ano, segment je ihned navzorkován zavoláním \texttt{navzorkujLinii} (ve třídě \texttt{GroundRadiationMonitoringComputation} jako metoda \texttt{sampleLine}). Výstupem algoritmu pro získání souřadnic je dvourozměrné pole obsahující souřadnice bodů již navzorkované linie. Vzdálenost mezi body je vypočtena pomocí QGIS třídy \texttt{QgsDistanceArea}\footnote{https://qgis.org/api/classQgsDistanceArea.html} a jejích metod, výpočet je proveden na referenčním elipsoidu \textit{WGS84}. Extrahování souřadnic vrcholů trasy je provedeno pomocí QGIS třídy \texttt{QgsVectorLayer}\footnote{https://qgis.org/api/classQgsVectorLayer.html} a její metody \texttt{getFeatures}.
 
-%\begin{algorithm}
-%\caption{Získání souřadnic bodů trasy}
-%\label{alg:getTrackVertices}
-%    \begin{algorithmic}[1]
-%    	\STATE{\textbf{funkce} získejSouřadnice}
-%    	\STATE{extrahuj souřadnice vrcholů trasy do poleSouřadniceVrcholů}
-%    	\STATE{přidej poleSouřadniceVrcholů[0] do poleNovéSouřadnice}
-%    	\FOR{i = řada od 0 do (délka(poleSouřadniceVrcholů) - 2)}
-%    		\STATE{bod1 = poleSouřadniceVrcholů[i]}
-%    		\STATE{bod2 = poleSouřadniceVrcholů[i + 1]}
-%    		\STATE{vzdálenost = vypočtiVzdálenost(bod1, bod2)}
-%    		\IF{vzdálenost > vzorkovacíVzdálenost}
-%    			\STATE{novéBody = navzorkujLinii(bod1, bod2)}
-%    			\STATE{přidej novéBody do poleNovéSouřadnice}
-%    			\ELSE
-%    			\STATE{přidej bod2 do poleNovéSouřadnice}
-%    		\ENDIF
-%    	\ENDFOR
-%    	\STATE{\textbf{return} poleNovéSouřadnice}
-%    \end{algorithmic}
-%\end{algorithm}
+\begin{algorithm}
+\caption{Získání souřadnic bodů trasy}
+\label{alg:getTrackVertices}
+    \begin{algorithmic}[1]
+    	\STATE{\textbf{funkce} získejSouřadnice}
+    	\STATE{extrahuj souřadnice vrcholů trasy do poleSouřadniceVrcholů}
+    	\STATE{přidej poleSouřadniceVrcholů[0] do poleNovéSouřadnice}
+    	\FOR{i = řada od 0 do (délka(poleSouřadniceVrcholů) - 2)}
+    		\STATE{bod1 = poleSouřadniceVrcholů[i]}
+    		\STATE{bod2 = poleSouřadniceVrcholů[i + 1]}
+    		\STATE{vzdálenost = vypočtiVzdálenost(bod1, bod2)}
+    		\IF{vzdálenost > vzorkovacíVzdálenost}
+    			\STATE{novéBody = navzorkujLinii(bod1, bod2)}
+    			\STATE{přidej novéBody do poleNovéSouřadnice}
+    			\ELSE
+    			\STATE{přidej bod2 do poleNovéSouřadnice}
+    		\ENDIF
+    	\ENDFOR
+    	\STATE{\textbf{return} poleNovéSouřadnice}
+    \end{algorithmic}
+\end{algorithm}
 
 Je zřejmé, že všechny nově vzniklé úseky trasy nemají stejnou délku. Je to dané tím, že délka původních segmentů není většinou dělitelná zadanou vzorkovací vzdáleností bez zbytku. Např. segment o délce 10 m při vzorkovací vzdálenosti 3 m bude rozdělen celkem na čtyři části, z toho tři budou o délce 3 m a jeden o délce 1 m. Následující pseudokód popisující výpočetní funkci souřadnic nových bodů tuto skutečnost zohledňuje a ověřuje. Algoritmus vypočte souřadnice bodu, který zakončuje tu část segmentu, která je dělitelná vzorkovací vzdáleností beze zbytku (pokud nastane případ, že segment je dělitelný beze zbytku, tato část algoritmu není vykonávána). Tento bod je poté považován za konečný bod (v pseudokódu jako \texttt{konečnýBod}) segmentu a nově vzniklý úsek je rozdělen na stejně dlouhé části. 
 
-%\begin{algorithm}
-%\caption{Výpočet souřadnic bodů}
-%	\begin{algorithmic}[1]
-%		\STATE{\textbf{funkce} navzorkujLinii (bod1, bod2)}
-%		\STATE{početNovéBody = $\lceil$délkaSegment / vzorkovacíVzd$\rceil$} - 1
-%		\IF{délkaSegment \textbf{mod} vzorkovacíVzd $\neq$ 0}
-%			\STATE{nejkratšíSegment\% = (délkaSegment \textbf{mod} vzorkovacíVzd) / délkaSegment}
-%			\STATE{konečnýBod = bod2 - (bod2 - bod1) $\cdot$ nejkratšíSegment\%}
-%			\STATE{vektor = konečnýBod - bod1}
-%			\ELSE
-%			\STATE{vektor = bod2 - bod1}
-%		\ENDIF
-%		\STATE{přírůstek = vektor / početNovéBody}
-%		\FOR{i = řada od 1 do početNovéBody}
-%			\STATE{přidej (bod1 + i $\cdot$ přírůstek) do poleNovéBody}
-%		\ENDFOR
-%		\IF{konečnýBod existuje}
-%			\STATE{přidej (konečnýBod) do poleNovéBody}
-%		\ENDIF
-%		\STATE{přidej bod2 do poleNovéBody}
-%		\STATE{\textbf{return} poleNovéBody}
-%	\end{algorithmic}
-%\end{algorithm}
+\begin{algorithm}
+\caption{Výpočet souřadnic bodů}
+	\begin{algorithmic}[1]
+		\STATE{\textbf{funkce} navzorkujLinii (bod1, bod2)}
+		\STATE{početNovéBody = $\lceil$délkaSegment / vzorkovacíVzd$\rceil$} - 1
+		\IF{délkaSegment \textbf{mod} vzorkovacíVzd $\neq$ 0}
+			\STATE{nejkratšíSegment\% = (délkaSegment \textbf{mod} vzorkovacíVzd) / délkaSegment}
+			\STATE{konečnýBod = bod2 - (bod2 - bod1) $\cdot$ nejkratšíSegment\%}
+			\STATE{vektor = konečnýBod - bod1}
+			\ELSE
+			\STATE{vektor = bod2 - bod1}
+		\ENDIF
+		\STATE{přírůstek = vektor / početNovéBody}
+		\FOR{i = řada od 1 do početNovéBody}
+			\STATE{přidej (bod1 + i $\cdot$ přírůstek) do poleNovéBody}
+		\ENDFOR
+		\IF{konečnýBod existuje}
+			\STATE{přidej (konečnýBod) do poleNovéBody}
+		\ENDIF
+		\STATE{přidej bod2 do poleNovéBody}
+		\STATE{\textbf{return} poleNovéBody}
+	\end{algorithmic}
+\end{algorithm}
 
 \subsection{Výpočet statistik}
 \label{subsec:vypocetStatistik}
 Získané souřadnice bodů navzorkované trasy dále vstupují do procesu výpočtu statistik, hlavního výstupu nástroje. Algoritmus výpočtu popisuje následující pseudokód \texttt{Výpočet statistik} (ve třídě \texttt{GroundRadiationMonitoringComputation} jako metoda \texttt{getStatistics}). Výpočtu předchází získání hodnot rastru na bodech. To je provedeno pomocí QGIS třídy \texttt{QgsDataProvider}\footnote{https://qgis.org/api/classQgsDataProvider.html} a jejích metod (v pseudokódu jako \texttt{získejHodnotu}). Pole se souřadnicemi bodů navzorkované trasy je v pseudokódu označeno jako \texttt{poleBody}. Pro výpočet vzdálenosti mezi body je použita stejná metoda jako v REFERENCOVAT 1. PSEUDOKÓD. Do výpočtu dále vstupuje uživatelsky zadaná rychlost pohybu, která je považována za konstantní na celé trase. Výstupem algoritmu jsou celkové statistiky (viz. sekce \ref{sec:VystupniData}): celková délka a čas projetí trasy, délka  a čas projetí trasy mimo mapu dávkových příkonů, maximální a průměrný dávkový příkon na trase a celková dávka. Výstupem jsou dále i dílčí statistiky na jednotlivých bodech trasy, které jsou dále zapsány do atributové tabulky nově vzniklé vrstvy a případně i do \zk{CSV} souboru (viz. sekce \ref{sec:VystupniData}). Data zapisovaná do souborů vypovídající o dávce a dávkovém příkonu jsou přenásobována koeficientem podle zvolených jednotek mapy dávkového příkonu uživatelem. 
 
 
-%\begin{algorithm}
-%\caption{Výpočet statistik}
-%	\begin{algorithmic}[1]
-%		\STATE{\textbf{funkce} vypočtiStatistiky (poleBody)}
-%		\STATE{kumulativníČas = 0}		
-%		\STATE{časSegmentPředchozí = 0}
-%		\STATE{časMimoRastr = 0}
-%		\STATE{délkaMimoRastr = 0}
-%       \STATE{početBodůRastr = 0}
-%		\STATE{kumulativníDávka = 0}
-%		\STATE{hodnotaRastrPředchozí = 0}
-%		\STATE{průměrnýPříkon = 0}
-%		\STATE{délkaTrasy = 0}
-%		\STATE{maximálníPříkon = 0}
+\begin{algorithm}
+\caption{Výpočet statistik}
+	\begin{algorithmic}[1]
+		\STATE{\textbf{funkce} vypočtiStatistiky (poleBody)}
+		\STATE{kumulativníČas = 0}		
+		\STATE{časSegmentPředchozí = 0}
+		\STATE{časMimoRastr = 0}
+		\STATE{délkaMimoRastr = 0}
+        \STATE{početBodůRastr = 0}
+		\STATE{kumulativníDávka = 0}
+		\STATE{hodnotaRastrPředchozí = 0}
+		\STATE{průměrnýPříkon = 0}
+		\STATE{délkaTrasy = 0}
+		\STATE{maximálníPříkon = 0}
 
 
-%		\FOR{i = řada od 0 do délka(poleBody)}
-%			\IF{i < délka(poleBody) - 1}
-%				\STATE{vzdálenost = vypočtiVzdálenost(poleBody[i], poleBody[i+1])}
-%			\ELSE
-%				\STATE{vzdálenost = 0}
-%			\ENDIF
-%			
-%			\STATE{délkaTrasy = délkaTrasy + vzdálenost}
-%
-%			\STATE{časSegment = vzdálenost / rychlost}
-%			\STATE{kumulativníČas = kumulativníČas + časSegmentPředchozí}
-%
-%			\STATE{dávkaSegment = časSegmentPředchozí $\cdot$ hodnotaRastrPředchozí}
-%			\STATE{kumulativníDávka = kumulativníDávka + dávkaSegment}
+		\FOR{i = řada od 0 do délka(poleBody)}
+			\IF{i < délka(poleBody) - 1}
+				\STATE{vzdálenost = vypočtiVzdálenost(poleBody[i], poleBody[i+1])}
+			\ELSE
+				\STATE{vzdálenost = 0}
+			\ENDIF
+			
+			\STATE{délkaTrasy = délkaTrasy + vzdálenost}
 
-%			\STATE{hodnotaRastr = získejHodnotu(poleBody[i])}
-%			\IF{bod1 mimo rastr \textbf{or} hodnotaRastr <= 0}
-%				\STATE{hodnotaRastr = 0}
-%				\STATE{časMimoRastr = časMimoRastr + časSegment}
-%				\STATE{délkaMimoRastr = délkaMimoRastr + vzdálenost}			
-%			\ELSE
-%				\STATE{průměrnýPříkon = průměrnýPříkon + hodnotaRastr}
-%				\STATE{početBodůRastr = početBodůRastr + 1}
-%			\ENDIF			
-%			
-%			\IF{hodnotaRastr > maximálníPříkon}
-%				\STATE{maximálníPříkon = hodnotaRastr}
-%			\ENDIF
-%			\STATE{přidej [hodnotaRastr, kumulativníČas, časSegmentPředchozí, kumulativníDávka] do poleAtributů}
-%			\STATE{hodnotaRastrPředchozí = hodnotaRastr}
-%			\STATE{časSegmentPředchozí = časSegment}			
-%		\ENDFOR
-%		
-%		\STATE{průměrnýPříkon = průměrnýPříkon / početBodůRastr}
-%		\STATE{statistiky = [délkaTrasy, kumulativníČas, délkaMimoRastr, časMimoRastr, maximálníPříkon, průměrnýPříkon, kumulativníDávka]}
-%		\STATE{\textbf{return} poleAtributů, statistiky}
-%	\end{algorithmic}
-%\end{algorithm}     
+			\STATE{časSegment = vzdálenost / rychlost}
+			\STATE{kumulativníČas = kumulativníČas + časSegmentPředchozí}
+
+			\STATE{dávkaSegment = časSegmentPředchozí $\cdot$ hodnotaRastrPředchozí}
+			\STATE{kumulativníDávka = kumulativníDávka + dávkaSegment}
+
+			\STATE{hodnotaRastr = získejHodnotu(poleBody[i])}
+			\IF{bod1 mimo rastr \textbf{or} hodnotaRastr <= 0}
+				\STATE{hodnotaRastr = 0}
+				\STATE{časMimoRastr = časMimoRastr + časSegment}
+				\STATE{délkaMimoRastr = délkaMimoRastr + vzdálenost}			
+			\ELSE
+				\STATE{průměrnýPříkon = průměrnýPříkon + hodnotaRastr}
+				\STATE{početBodůRastr = početBodůRastr + 1}
+			\ENDIF			
+			
+			\IF{hodnotaRastr > maximálníPříkon}
+				\STATE{maximálníPříkon = hodnotaRastr}
+			\ENDIF
+			\STATE{přidej [hodnotaRastr, kumulativníČas, časSegmentPředchozí, kumulativníDávka] do poleAtributů}
+			\STATE{hodnotaRastrPředchozí = hodnotaRastr}
+			\STATE{časSegmentPředchozí = časSegment}			
+		\ENDFOR
+		
+		\STATE{průměrnýPříkon = průměrnýPříkon / početBodůRastr}
+		\STATE{statistiky = [délkaTrasy, kumulativníČas, délkaMimoRastr, časMimoRastr, maximálníPříkon, průměrnýPříkon, kumulativníDávka]}
+		\STATE{\textbf{return} poleAtributů, statistiky}
+	\end{algorithmic}
+\end{algorithm}     
 
 Může se stát, že trasa probíhá mimo mapu dávkových příkonů. Extrakce hodnoty rastru v bodě, který leží mimo něj, vrací hodnotu \texttt{None}, tedy že data nejsou dostupná. Prezentovaný algoritmus v tomto případě místo None zapíše číslo 0. Podobně, pokud je hodnota rastru menší než 0, algoritmus tuto hodnotu přepíše na 0. Do výsledných statistik, jak již bylo zmíněno, jsou počítány délka a čas projetí trasy mimo rastr, tj. když je hodnota rastru 0. Do průměrného dávkového příkonu na trase nejsou tyto hodnoty započítávané. 
 
@@ -262,7 +262,7 @@ Testování zásuvného modulu při vývoji probíhalo s využitím dat připrav
 Pro tvorbu interpolované mapy dávkových příkonů byla využita část reálných měření projektu Safecast(VIZ KAPITOLA ŇÁKÁ Z TEORIE O SAFECASTU)
 v oblasti prefektury Fukushima (Japonsko). Měření prováděly dobrovolnické mobilní skupiny a obsahují informace o času měření, GPS souřadnice a hodnoty dávkového příkonu záření gama v $\mu$Sv/h. Kompletní dataset je dostupný ke stažení ve formátu \zk{CSV} na webových stránkách projektu. Dataset je uvolněn pod licencí CC0 1.0 Universal (CC0 1.0) Public Domain Dedication\footnote{https://creativecommons.org/publicdomain/zero/1.0/}. 
 
-Z balíku dat byla vybrána zájmová oblast kolem jaderné elektrárny Fukushima Daiichi o které bylo psáno v předchozích kapitolách (ODKAZ NA KAPITOLU Z TEORIE ZASE KAMARÁDE). Data byla omezena pouze na měření z roku 2011. V open source programu SAGA-GIS\footnote{http://www.saga-gis.org/en/index.html} byla z dat vytvořena interpolovaná mapa dávkových příkonů metodou Multilevel B-Spline Interpolation\footnote{kerou z těhle, nebo obě?http://www.saga-gis.org/saga\_tool\_doc/2.1.3/grid\_spline\_4.html}\footnote{http://csweb.engr.ccny.cuny.edu/~wolberg/pub/tvcg97.pdf}. 
+Z balíku dat byla vybrána zájmová oblast kolem jaderné elektrárny Fukushima Daiichi o které bylo psáno v předchozích kapitolách (ODKAZ NA KAPITOLU Z TEORIE ZASE). Data byla omezena pouze na měření z roku 2011. V open source programu SAGA-GIS\footnote{http://www.saga-gis.org/en/index.html} byla z dat vytvořena interpolovaná mapa dávkových příkonů metodou Multilevel B-Spline Interpolation\footnote{kerou z těhle, nebo obě?http://www.saga-gis.org/saga\_tool\_doc/2.1.3/grid\_spline\_4.html}\footnote{http://csweb.engr.ccny.cuny.edu/~wolberg/pub/tvcg97.pdf}. 
 
 \begin{figure}[H]
     \centering
