Little text modifications.

--- a/text/3-technologie.tex
+++ b/text/3-technologie.tex
@@ -16,7 +16,7 @@ QGIS je multiplatformní geografický informační systém (\zk{GIS}) vyvíjený
 
 QGIS disponuje nepřeberným množstvím zásuvných modulů (pluginů) rozšiřujících funkčnost softwaru. Pluginy jsou programovány v jazyku C++ nebo Python. 
 
-Open source nutně neznmná nepodporovný, právě naopak, velikost on-line komunity zabývající se QGIS a její rychla odezva z toho dělá hustotu.
+Open source nutně neznmná nepodporovný, právě naopak, velikost on-line komunity zabývající se QGIS a její rychla odezva...
 
 
 
