--- a/text/2-teorie.tex
+++ b/text/2-teorie.tex
@@ -4,23 +4,118 @@ POPSAT FUKUŠIMU, NĚJAK TAK JAK TO MÁ HELEBRATNT NAPSANÝ U VSTUPNÍCH DAT
 POPSAT SAFECAST, DÁT WEBOVKU, CO DĚLAT A JAK TO SOUVISÍ
 Tato kapitola se zabývá..
 \section{Ionizující záření}
+	
+Záření (radiace) je proces, při kterém energie prochází prostorem. Typickými příklady záření, se kterými se setkáváme na denní bázi, je sluneční svit, rádiový, televizní nebo i wifi signál. % http://www.world-nuclear.org/information-library/safety-and-security/radiation-and-health/nuclear-radiation-and-health-effects.aspx
 
-\section{Jaderná bezpečnost}
-Bezpečnostní opatření, která nemusí být potřeba, ale měly by být připravené.
 
-\section{Radiační ochrana}
-Co to je
-\subsection{Historie}
-https://www.suro.cz/cz/radiacni-ochrana/historie
-\subsection{Biologické účinky záření}
-%%https://www.fbi.vsb.cz/export/sites/fbi/050/.content/sys-cs/resource/PDF/studijni-materialy/zareni.pdf
+Ionizující záření je záření s takovým množstvím energie, že může vyrážet elektrony z atomového obalu a tím látku ionizovat. Tento jev se využívá například v radiologii, lékařském oboru, který ionizující záření používá za účelem diagnóz, terapií a rozvoje vědy. %http://obory.vitalion.cz/radiologie/ %http://www.who.int/ionizing\_radiation/about/what\_is\_ir/en/
 
-\subsection{Monitorování radiace}
-Jak se to měří
+\subsection{Druhy ionizujícího záření} %http://astronuklfyzika.cz/JadRadFyzika6.htm
+Ionizující záření se dělí na dva druhy:
 
-\section{Fyzikální základ}
+\begin{itemize}
+	\item \textbf{Přímo ionizující}
+	
+		Kvanta přímo ionizujícího záření nesou elektický náboj a přímo vyrážejí elektrony z atomů. Součástí této kategorie je např. záření $\alpha$ (prudce letící kladná jádra izotopu helia $_{2}He^{4}$ %https://www.cez.cz/edee/content/microsites/nuklearni/k22.htm
+		), $\beta^{-}$ (proud elektronů vznikající při přeměně neutronu na proton %https://www.cez.cz/edee/content/microsites/nuklearni/k22.htm)
+		), $\beta^{+}$ (proud kladných pozitronů, antičástic k elektronům) %https://www.cez.cz/edee/content/microsites/nuklearni/k22.htm)
+		 atd.
+		 
+	\item \textbf{Nepřímo ionizující}
+	
+		Nepřímo ionizující záření předává svou kinetickou energii nabitým látkovým částicím, které pak látku ionizují. Kvanta tohoto záření tedy nejsou elektricky nabita. Do této kategorie se řadí především rentgenové a $\gamma$ záření (elektromagnetická záření s velmi nízkou vlnovou délkou). %http://astronuklfyzika.cz/JadRadFyzika6.htm	
+\end{itemize}
 
-Jednotky, převody...
+\subsection{Fyzikální jednotky} %http://atominfo.cz/2012/05/sievert-becquerel-rentgen-jak-merime-radioaktivitu/
+
+\begin{itemize}
+	\item \textbf{Dávka, dávkový příkon}
+	
+		V jaderné fyzice se jako základní jednotka používá becquerel [Bq] patřící mezi odvozené jednotky soustavy SI. Vyjadřuje střední počet radiokativních přeměn za sekundu. Tato jednotka ovšem neříká nic o druhu záření, jeho biologickému účinku, energii atd. Pro popis ionizujícího záření jsou zavedeny veličiny, které slouží jako charakteristiky jeho účinků na různé látky. Nejdůležitější z těchto veličin je tzv. dávka, která má za jednotku gray [Gy] a patří mezi základní jednotky SI. Fyzikální rozměr jednotky gray je joule na kilogram [J/kg]. Častá veličina je dále tzv. dávkový příkon, tedy přírust dávky v čase [Gy/s]. 
+		
+	\item \textbf{Ekvivalentní dávka, ekvivalentní dávkový příkon}
+
+	 	V předchozím bodě zmíněné veličiny nezohledňují všechny účinky působení záření na živou hmotu. Proto byly zavedeny radiobiologické veličiny, které toto zohledňují. Je to ekvivalentní dávka, která je vypočtena z dávky přenásobené tzv. jakostním činitelem Q závisejícím na typu a energii záření. Jeho hodnota je doporučovaná mezinárodní komisí radiologické ochrany\footnote{V dokumentu ICRP Publication 103 dostupném na http://www.sujb.cz/fileadmin/sujb/docs/radiacni-ochrana/ICRP103\_dokument.pdf}. Například u gama záření je Q = 1. Ekvivalentní dávka má za jednotku sievert [Sv], ekvivalentní dávkový příkon pak sievert za jednotku času [Sv/s].
+	 	
+	\item \textbf{Shrnutí jednotek}
+	
+		\begin{table}[h!]
+			\centering
+			\caption{Fyzikální jednotky ionizujícího záření}
+			\label{tab:tabulkaJednotek}
+			\begin{tabular}{|c|c|c|}
+				\hline
+				\textbf{Název}              & \textbf{Jednotka}  & \textbf{Značení} \\ \hline
+				Dávka                       & gray               & {[}Gy{]}         \\ \hline
+				Dávkový příkon              & gray za sekundu    & {[}Gy/s{]}       \\ \hline
+				Ekvivalentní dávka          & sievert            & {[}Sv{]}         \\ \hline
+				Ekvivalentní dávkový příkon & sievert za sekundu & {[}Sv/s{]}       \\ \hline
+			\end{tabular}
+		\end{table}
+\end{itemize}
+
+\subsection{Zdroje ionizujícího záření} 
+Zdroje ionizujícího záření mohou být přírodní a umělé. Největší ozáření obyvatelstva způsobují zdroje přírodní, přestože pozornost je věnována především zdrojům umělým. %http://fbmi.sirdik.org/4-kapitola/41.html
+
+\begin{itemize}
+	\item \textbf{Přírodní zdroje záření}
+	
+			Tyto zdroje tvoří tzv. přírodní pozadí. Přírodní zdroje jsou dále rozděleny na dvě kategorie, kosmické záření a přírodní radionuklidy. %http://fbmi.sirdik.org/4-kapitola/42
+			Množství kosmického záření se odvíjí od nadmořské výšky a zeměpisné šířky kvůli působení zemského magnetického pole na dráhu nabitých částic. Například mezi 30$^{o}$ a 60$^{o}$ jižní resp. severní šířky je intenzita záření příbližně o 10\% vyšší než na rovníku a magnetických pólech. %http://fbmi.sirdik.org/4-kapitola/42/421.html
+			Zdroje přírodních radionuklidů jsou především horniny. Intenzita záření  se odvíjí od původů jednotlivých hornin. Pro ilustraci, vyvřelé horniny vykazují vyšší aktivitu než horniny metamorfované. %http://fbmi.sirdik.org/4-kapitola/42/422.html
+	
+	\item \textbf{Umělé zdroje záření} %http://fbmi.sirdik.org/4-kapitola/43.html
+	
+			Za umělé zdroje záření jsou považovány takové zdroje, které způsobují ozáření při činnostech s nimi, dále takové zdroje, které souvisí s lékařskými zákroky. Běžně se vedle lékařského ozáření další zdroje podílí na ozáření člověka pouze minimálně. Dalšími zdroji jsou radionuklidy nacházející se v životním prostředí pocházející ze spadu po mimořádných jaderných haváriích (poškození jaderného zařízení) nebo po zkouškách jaderných zbraní. Radionuklidy, které se dostaly do ovzduší, se dostávají na povrch ve formě suchého nebo mokrého spadu s deštěm, kde kontaminují vodu a potravu. %http://fbmi.sirdik.org/4-kapitola/43/432.html		
+			
+\end{itemize}
+
+Podrobnější popis zdrojů ionizujícího záření by byl nad rámec této bakalářské práce, proto nebude dále rozebírán. 
+
+\subsection{Biologické účinky ionizujícího záření}
+Pro stanovení kritérií a principů radiační ochrany obyvatelstva a pracujících, kteří přicházejí se zdroji ionizujícího záření více do kontaktu, je potřeba vědět, jak ionizující záření působí na lidský organismus. Z těchto kritérií je dále je odvozen systém limitování dávek (viz. podkapitola ???). 
+%https://www.sujb.cz/radiacni-ochrana/oznameni-a-informace/strucny-prehled-biologickych-ucinku-zareni/
+
+Jak již bylo stručně popsáno, ionizující záření (radiace) způsobuje ionizaci atomů. Ta může dále vést k chemickým reakcím, fyzikálním změnám a v případě živých tkání k biochemickým změnám. Tyto změny mohou vést k poškození organismu nebo i k jeho úmrtí. Účinek radiace na organismus je rozdělen na 4 následující etapy: %http://astronuklfyzika.cz/RadiacniOchrana.htm#2
+
+\begin{enumerate}
+	\item \textbf{Fyzikální stádium}
+	
+		Fyzikální stádium je primární proces, při kterém dochází k ionizaci atomů (toto vede k narušení chemických vazeb mezi atomy a molekulami). Při dávce 1Gy (jednotky dávky záření budou rozebrány v kapitole ??) se v objemu každé ozářené buňky o typické velikosti 10$\mu$m vytváří 10$^5$ ionizací. Tento proces trvá jen cca 10$^{-16}$ - 10$^{-14}$s.
+		
+	\item \textbf{Fyzikálně-chemické stádium}
+	
+	Sekundárním procesem je fyzikálně-chemické stádium, při kterém dochází k disociaci molekul (rozklad na kladně a záporně nabité částice) a vzniku volných radikálů (vysoce reaktivních částic). Tento proces je podobně jako proces předchozí velmi rychlý. Trvá přibližně 10$^{-14}$ - 10$^{-10}$s.	 
+	
+	\item \textbf{Chemické stádium}
+	
+	Produkty předchozích stádií reagují s důležitými organickými molekulami a mění jejich složení a funkci. Například zlomy řetězců v molekule DNA jsou řazeny mezi typické poruchy. Trvání tohoto stádia ovlivňuje transportní doba reaktivních složek z místa svého vzniku do místa napadené biomolekuly v rozmezí od tisícin sekundy do řádově jednotek sekundy.
+	
+	\item \textbf{Biologické stádium}
+	
+	Popsané molekulární změny mohou vyústit ve funkční a morfologické změny v buňkách, orgánech a poté i celkově v organismu. Trvání této fáze se pohybuje od jednotek sekund (buňky) až po několik let (organismus). Kdy se biologické stádium projeví záleží na množství dávky záření. Při nízkých dávkách se může projevit až za několik desítek let, kdežto naopak při vysokých dávkách již během desítek minut. 
+\end{enumerate}
+
+Lidský organismus má omezenou schopnost opravy poškozených molekul buněk. Pokud však dávka překročí určitou mez, buňky uhynou a vzniká tzv. nemoc z ozáření. 	% všechno až sem: http://astronuklfyzika.cz/RadiacniOchrana.htm#2
+Nemoc z ozáření může být rozdělena na 2 kategorie: %http://www.priznaky-projevy.cz/traumatologie/nemoc-z-ozareni-radiacni-syndrom-priznaky-projevy-symptomy
+
+\begin{itemize}
+	\item \textbf{Akutní nemoc z ozáření}
+	
+		Akutní nemoc z ozáření je způsobena jednorázovým ozářením. Prvotními příznaky je nevolnost, zvracení a průjmy. Pokud dávka ozáření překročí hodnotu přibližně 4 Sv (viz. kapitola ????), nastupuje tzv. střevní forma, kterou doprovází krvavé průjmy a minerální rozvrat. Poté přichází období latence (prodlevy), jehož délka trvání závisí na množství absorbované dávky. Po uplynutí latentní fáze nastupuje tzv. dřeňová forma, kdy dojde k zhroucení krvetvorby a imunitních mechanismů. Nemoc v této fázi dále způsobuje sepsi, sterilitu, u těhotných žen potrat atp. Pokud dojde k absorbaci dávek záření vyšších než 10 Sv, dochází k nevratnému poškození buněk centrálního nervového systému a později nastává smrt.
+		
+	\item \textbf{Chronická nemoc z ozáření}
+	
+		Tato forma nemoci z ozáření se rozvíjí při dlouhodobém působení malých dávek ionizujícího záření. Dále se dělí na 3 fáze. První z nich je fáze nespecifických obtíží způsobující nespavost, bolesti hlavy, pokles bílých krvinek, zažívací obtíže atd. Další z fází je fáze výrazné symptomatologie, kde se stupňují bolesti hlavy, dochází k poruchám motoriky, k chronickým průjmům, váhovým úbytkům atd. Dochází k poškození centrálního nervového systému, což doprovází zhoršený sluch a zrak. Následuje poslední fáze nezvratného poškození. Přestávají fungovat rozmnožovací orgány, dochází k poškození srdce, ledvin, jater, dále se na kůži a sliznici tvoří vředy atd. 
+		%http://www.priznaky-projevy.cz/traumatologie/nemoc-z-ozareni-radiacni-syndrom-priznaky-projevy-symptomy
+\end{itemize}
+
+\section{Radiační ochrana} %https://www.suro.cz/cz/radiacni-ochrana
+Cílem radiační ochrany je zajistit ochranu obyvatelstva před účinky ionizujícího záření a zároveň umožnit z těchto účinků co vytěžit co největší přínos (v radiologii, v jaderné energetice atp.) 
+		
+
+
+
 
 
 
