--- a/text/2-teorie.tex
+++ b/text/2-teorie.tex
@@ -111,9 +111,10 @@ Nemoc z ozáření může být rozdělena na 2 kategorie: %http://www.priznaky-p
 \end{itemize}
 
 \section{Radiační ochrana} %https://www.suro.cz/cz/radiacni-ochrana
-Cílem radiační ochrany je zajistit ochranu obyvatelstva před účinky ionizujícího záření a zároveň umožnit z těchto účinků co vytěžit co největší přínos (v radiologii, v jaderné energetice atp.) 
-		
+Cílem radiační ochrany je zajistit ochranu obyvatelstva před účinky ionizujícího záření a zároveň umožnit z těchto účinků vytěžit co největší přínos (v radiologii, v jaderné energetice atp.). Důležitou součástí radiační ochrany je monitorování radiační situace. Nasbíraná data slouží pro posuzování stavu ozáření, pro další potřeby sledování a pro rozhodování o opatřeních v případě radiačních havárií. %https://www.sujb.cz/monitorovani-radiacni-situace/
 
+\subsection{Limity expozice ionizujícímu záření v České Republice}
+Stupeň povoleného ozáření obyvatelstva se řídí omezeními, které jsou určovány legislativou ve vyhláškách úřadů zabývajících se touto problematikou (\zk{SÚRO}, \zk{SÚJB}). Konkrétně pro Českou republiku je to vyhláška  307/2002 Sb. Použitými jednotkami jsou jednotky ekvivalentní dávky mikrosieverty [$\mu$Sv]. Mikrosieverty se v udávání dávek běžně používají z důvodů, že hodnota 1 sievert je tak vysoká, že se s ní člověk běžně nesetká.  
 
 
 
