--- a/text/zkratky.tex
+++ b/text/zkratky.tex
@@ -9,6 +9,10 @@
 	      {SÚRO}
 	      {Státní ústav radiační ochrany, v. v. i.}
 
+	\novazkratka{SÚJB}
+	      {SÚJB}
+	      {Státní úřad pro jadernou bezpečnost}
+
 	\novazkratka{CSV}
 		  {CSV}
 		  {Comma-separated values - hodnoty oddělené čárkou}
